src/dcp-stream.cc
@@ -970,6 +970,7 @@ PassiveStream::~PassiveStream() {
 uint32_t PassiveStream::setDead(end_stream_status_t status) {
     LockHolder lh(streamMutex);
     transitionState(STREAM_DEAD);
+    lh.unlock();
     uint32_t unackedBytes = buffer.bytes;
     clearBuffer();
     LOG(EXTENSION_LOG_WARNING, "%s (vb %d) Setting stream to dead state,"
